# demo-django-htmx-alpine

./: .gitignore  README.md  pyproject.toml
djangoapp/contact/: forms.py  urls.py  views.py
djangoapp/contact/templates/: contact_form.html  contact_form_confirm.html
djangoapp/djangoapp/: settings.py  urls.py
djangoapp/modal/: urls.py  views.py
djangoapp/modal/templates/: simple_modal.html
djangoapp/movie/: forms.py  urls.py  views.py
djangoapp/movie/templates/: search_movie.html  search_movie_list.html
djangoapp/templates/: base.html
static/: htmx.min.js
