[tool.poetry]
name = "demo-django-htmx-alpine"
version = "0.1.0"
description = ""
authors = ["Etchegoyen Matthieu <etchegom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
omdb-fixtures-loader = { git = "https://github.com/etchegom/omdb-fixtures-loader", branch = "master" }
django-extensions = "^3.1.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
