[tool.poetry]
authors = ["Etchegoyen Matthieu <etchegom@gmail.com>"]
description = ""
name = "demo-django-htmx-alpine"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.2"
django-extensions = "^3.1.5"
django-htmx = "^1.9.0"
omdb-fixtures-loader = {git = "https://github.com/etchegom/omdb-fixtures-loader", branch = "master"}
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
djlint = "^0.7.6"

[tool.djlint]
blank_line_after_tag = "load,extends,include"
exclude = ".venv"
ignore = "H014,H015,H030,H031"
indent = 4
max_attribute_length = 10
max_line_length = 100
profile = "django"
use_gitignore = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
